{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 2850,
  "lineage": "e96ee949-248c-f7aa-02aa-4087bea3d8d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cheilvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04237f495c026fd25",
            "association_id": "eipassoc-0961db9a13822df22",
            "domain": "vpc",
            "id": "eipalloc-04237f495c026fd25",
            "instance": "i-0ef3cd3e2f33ee77e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04ef34e46c4a07645",
            "private_dns": "ip-10-0-8-156.ec2.internal",
            "private_ip": "10.0.8.156",
            "public_dns": "ec2-34-230-247-69.compute-1.amazonaws.com",
            "public_ip": "34.230.247.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "shared",
              "Name": "lrm_v2_vpn_ip",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "lrm_v2_vpn_ip",
              "Proyect": "lrm"
            },
            "timeouts": {
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.lrm_v2_vpn",
            "aws_key_pair.lrm_v2_vpn_key",
            "aws_security_group.lrm_v2_vpn_sg",
            "aws_subnet.prod_a",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lrm_v2_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-099aae505e404f737",
            "arn": "arn:aws:ec2:us-east-1:185279236646:instance/i-0ef3cd3e2f33ee77e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef3cd3e2f33ee77e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "lrm-v2-vpn-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ef34e46c4a07645",
            "private_dns": "ip-10-0-8-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.156",
            "public_dns": "ec2-34-230-247-69.compute-1.amazonaws.com",
            "public_ip": "34.230.247.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "shared",
                  "Name": "vpn",
                  "Proyect": "lrm"
                },
                "throughput": 0,
                "volume_id": "vol-03c6bc529e0e3472d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ed3f524cc77cbe2",
            "tags": {
              "Environment": "shared",
              "Name": "lrm-v2-vpn",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "lrm-v2-vpn",
              "Proyect": "lrm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092c73e82b3aeffc4"
            ]
          },
          "dependencies": [
            "aws_key_pair.lrm_v2_vpn_key",
            "aws_security_group.lrm_v2_vpn_sg",
            "aws_subnet.prod_a",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lrm_v2_prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:internet-gateway/igw-0a4693efb5ffbc742",
            "id": "igw-0a4693efb5ffbc742",
            "owner_id": "185279236646",
            "tags": {
              "Name": "lrm_v2_prod_igw"
            },
            "tags_all": {
              "Name": "lrm_v2_prod_igw"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lrm_engine_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "lrm-engine-elb-logs",
                "enabled": true,
                "prefix": "lrm-engine-elb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-engine-elb/67744ac34f01f805",
            "arn_suffix": "app/lrm-engine-elb/67744ac34f01f805",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lrm-engine-elb-1186033422.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-engine-elb/67744ac34f01f805",
            "idle_timeout": 500,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lrm-engine-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07435b2428bca74b9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032a53d911ecbb547"
              },
              {
                "subnet_id": "subnet-04b5a1ad1826ed925"
              },
              {
                "subnet_id": "subnet-0cd7a07db70f05e51"
              }
            ],
            "subnets": [
              "subnet-032a53d911ecbb547",
              "subnet-04b5a1ad1826ed925",
              "subnet-0cd7a07db70f05e51"
            ],
            "tags": {
              "Environment": "shared",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "shared",
              "Proyect": "lrm"
            },
            "vpc_id": "vpc-0664694b3f4af88c4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.lrm_engine_elb_logs",
            "aws_security_group.lrm_engine_sg",
            "aws_subnet.dev_a",
            "aws_subnet.dev_b",
            "aws_subnet.dev_c",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lrm_v2_dev_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "lrm-v2-elb-logs-dev",
                "enabled": true,
                "prefix": "lrm-v2-dev-elb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-v2-dev-elb/4d11c533f8a6908d",
            "arn_suffix": "app/lrm-v2-dev-elb/4d11c533f8a6908d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lrm-v2-dev-elb-1190725290.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-v2-dev-elb/4d11c533f8a6908d",
            "idle_timeout": 500,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lrm-v2-dev-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a4d46904bb672ea6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032a53d911ecbb547"
              },
              {
                "subnet_id": "subnet-04b5a1ad1826ed925"
              },
              {
                "subnet_id": "subnet-0cd7a07db70f05e51"
              }
            ],
            "subnets": [
              "subnet-032a53d911ecbb547",
              "subnet-04b5a1ad1826ed925",
              "subnet-0cd7a07db70f05e51"
            ],
            "tags": {
              "Environment": "development",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "development",
              "Proyect": "lrm"
            },
            "vpc_id": "vpc-0664694b3f4af88c4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.lrm_v2_elb_logs_dev",
            "aws_security_group.lrm_v2_dev_sg",
            "aws_subnet.dev_a",
            "aws_subnet.dev_b",
            "aws_subnet.dev_c",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lrm_v2_prod_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "lrm-v2-elb-logs",
                "enabled": true,
                "prefix": "lrm-v2-prod-elb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-v2-prod-elb/2b81797f4e797c84",
            "arn_suffix": "app/lrm-v2-prod-elb/2b81797f4e797c84",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lrm-v2-prod-elb-1930995321.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-v2-prod-elb/2b81797f4e797c84",
            "idle_timeout": 500,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lrm-v2-prod-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d83dda437b8a10b7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08ed3f524cc77cbe2"
              },
              {
                "subnet_id": "subnet-09f420a6a3797fe1f"
              },
              {
                "subnet_id": "subnet-0ad555f7510c27a5a"
              }
            ],
            "subnets": [
              "subnet-08ed3f524cc77cbe2",
              "subnet-09f420a6a3797fe1f",
              "subnet-0ad555f7510c27a5a"
            ],
            "tags": {
              "Environment": "production",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "production",
              "Proyect": "lrm"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0664694b3f4af88c4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.lrm_v2_elb_logs",
            "aws_security_group.lrm_v2_prod_sg",
            "aws_subnet.prod_a",
            "aws_subnet.prod_b",
            "aws_subnet.prod_c",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lrm_engine_elb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:listener/app/lrm-engine-elb/67744ac34f01f805/36c12d22e8378566",
            "certificate_arn": "arn:aws:acm:us-east-1:185279236646:certificate/d4936e98-609f-4f89-ab90-d095fedd9ae6",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-engine-tg/f96237b00be2a13e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:listener/app/lrm-engine-elb/67744ac34f01f805/36c12d22e8378566",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-engine-elb/67744ac34f01f805",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.lrm_engine_domain_cert",
            "aws_acm_certificate_validation.lrm_engine_domain_cert_validation",
            "aws_lb.lrm_engine_elb",
            "aws_lb_target_group.lrm_engine_tg",
            "aws_route53_record.lrm_engine_domain_records",
            "aws_route53_zone.lrm_v2_dns_zone",
            "aws_s3_bucket.lrm_engine_elb_logs",
            "aws_security_group.lrm_engine_sg",
            "aws_subnet.dev_a",
            "aws_subnet.dev_b",
            "aws_subnet.dev_c",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lrm_v2_dev_elb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:listener/app/lrm-v2-dev-elb/4d11c533f8a6908d/94836ce867bca649",
            "certificate_arn": "arn:aws:acm:us-east-1:185279236646:certificate/a75cfd12-27f8-4ad5-8eb7-a85d4b3ad85b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-v2-dev-tg/55afb56cc839f3be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:listener/app/lrm-v2-dev-elb/4d11c533f8a6908d/94836ce867bca649",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-v2-dev-elb/4d11c533f8a6908d",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.lrm_v2_dev_domain_cert",
            "aws_acm_certificate_validation.lrm_v2_dev_domain_cert_validation",
            "aws_lb.lrm_v2_dev_elb",
            "aws_lb_target_group.lrm_v2_dev_tg",
            "aws_route53_record.lrm_v2_dev_domain_records",
            "aws_route53_zone.lrm_v2_dns_zone",
            "aws_s3_bucket.lrm_v2_elb_logs_dev",
            "aws_security_group.lrm_v2_dev_sg",
            "aws_subnet.dev_a",
            "aws_subnet.dev_b",
            "aws_subnet.dev_c",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lrm_v2_prod_elb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:listener/app/lrm-v2-prod-elb/2b81797f4e797c84/0ad8419b28a4104b",
            "certificate_arn": "arn:aws:acm:us-east-1:185279236646:certificate/464b0d7c-f57a-45af-8bfe-73cec23a3aca",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-v2-prod-tg/f258307a21e6be7d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:listener/app/lrm-v2-prod-elb/2b81797f4e797c84/0ad8419b28a4104b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:loadbalancer/app/lrm-v2-prod-elb/2b81797f4e797c84",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "production",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "production",
              "Proyect": "lrm"
            },
            "timeouts": {
              "read": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.lrm_v2_prod_domain_cert",
            "aws_acm_certificate_validation.lrm_v2_prod_domain_cert_validation",
            "aws_lb.lrm_v2_prod_elb",
            "aws_lb_target_group.lrm_v2_prod_tg",
            "aws_route53_record.lrm_v2_prod_domain_records",
            "aws_route53_zone.lrm_v2_dns_zone",
            "aws_s3_bucket.lrm_v2_elb_logs",
            "aws_security_group.lrm_v2_prod_sg",
            "aws_subnet.prod_a",
            "aws_subnet.prod_b",
            "aws_subnet.prod_c",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lrm_engine_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-engine-tg/f96237b00be2a13e",
            "arn_suffix": "targetgroup/lrm-engine-tg/f96237b00be2a13e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-engine-tg/f96237b00be2a13e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lrm-engine-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "shared",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "shared",
              "Proyect": "lrm"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lrm_v2_dev_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-v2-dev-tg/55afb56cc839f3be",
            "arn_suffix": "targetgroup/lrm-v2-dev-tg/55afb56cc839f3be",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-v2-dev-tg/55afb56cc839f3be",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lrm-v2-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "development",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "development",
              "Proyect": "lrm"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lrm_v2_prod_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-v2-prod-tg/f258307a21e6be7d",
            "arn_suffix": "targetgroup/lrm-v2-prod-tg/f258307a21e6be7d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:185279236646:targetgroup/lrm-v2-prod-tg/f258307a21e6be7d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lrm-v2-prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Proyect": "lrm"
            },
            "tags_all": {
              "Environment": "production",
              "Proyect": "lrm"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a4693efb5ffbc742",
            "id": "r-rtb-0c7a06b70061c4c961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c7a06b70061c4c96",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lrm_v2_prod_igw",
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lrm_engine_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:security-group/sg-07435b2428bca74b9",
            "description": "Main security group for LRM V2 devuction network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07435b2428bca74b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for internal traffic from ELB to ECS",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from public internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis Port",
                "from_port": 6379,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lrm_engine_sg",
            "name_prefix": "",
            "owner_id": "185279236646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lrm_engine_sg"
            },
            "tags_all": {
              "Name": "lrm_engine_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lrm_v2_batch_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:security-group/sg-07231243eb7819304",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07231243eb7819304",
            "ingress": [],
            "name": "lrm_v2_batch_sg",
            "name_prefix": "",
            "owner_id": "185279236646",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lrm_v2_dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:security-group/sg-0a4d46904bb672ea6",
            "description": "Main security group for LRM V2 devuction network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4d46904bb672ea6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for internal traffic from ELB to ECS",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from public internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis Port",
                "from_port": 6379,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lrm_v2_dev_sg",
            "name_prefix": "",
            "owner_id": "185279236646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lrm_v2_dev_sg"
            },
            "tags_all": {
              "Name": "lrm_v2_dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lrm_v2_prod_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:security-group/sg-0d83dda437b8a10b7",
            "description": "Main security group for LRM V2 production network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d83dda437b8a10b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for internal traffic from ELB to ECS",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from public internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis Port",
                "from_port": 6379,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lrm_v2_prod_sg",
            "name_prefix": "",
            "owner_id": "185279236646",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "lrm_v2_prod_sg"
            },
            "tags_all": {
              "Name": "lrm_v2_prod_sg"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lrm_v2_vpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:security-group/sg-092c73e82b3aeffc4",
            "description": "Main security group for LRM V2 vpn",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092c73e82b3aeffc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from public internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis Port",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lrm_v2_vpn",
            "name_prefix": "",
            "owner_id": "185279236646",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lrm_v2_vpn_sg_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:security-group/sg-007f2b3a9d0f0f0bb",
            "description": "Main security group for LRM V2 vpn",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007f2b3a9d0f0f0bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from public internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis Port",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lrm_v2_vpn_sg",
            "name_prefix": "",
            "owner_id": "185279236646",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:subnet/subnet-0cd7a07db70f05e51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd7a07db70f05e51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185279236646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_a"
            },
            "tags_all": {
              "Name": "dev_a"
            },
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:subnet/subnet-032a53d911ecbb547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032a53d911ecbb547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185279236646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_b"
            },
            "tags_all": {
              "Name": "dev_b"
            },
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:subnet/subnet-04b5a1ad1826ed925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b5a1ad1826ed925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185279236646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_c"
            },
            "tags_all": {
              "Name": "dev_c"
            },
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:subnet/subnet-08ed3f524cc77cbe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ed3f524cc77cbe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185279236646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_a"
            },
            "tags_all": {
              "Name": "prod_a"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:subnet/subnet-0ad555f7510c27a5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad555f7510c27a5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185279236646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_b"
            },
            "tags_all": {
              "Name": "prod_b"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:subnet/subnet-09f420a6a3797fe1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f420a6a3797fe1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185279236646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_c"
            },
            "tags_all": {
              "Name": "prod_c"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0664694b3f4af88c4"
          },
          "dependencies": [
            "aws_vpc.lrm_v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lrm_v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185279236646:vpc/vpc-0664694b3f4af88c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097b096b721ff6572",
            "default_route_table_id": "rtb-0c7a06b70061c4c96",
            "default_security_group_id": "sg-085fe5bd3afc3d915",
            "dhcp_options_id": "dopt-0b8502c546508e0b8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0664694b3f4af88c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7a06b70061c4c96",
            "owner_id": "185279236646",
            "tags": {
              "Environment": "shared",
              "Name": "lrm_v2"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "lrm_v2"
            }
          }
        }
      ]
    }
  ]
}